--- a/template/base.html
+++ b/template/base.html
@@ -73,7 +73,7 @@
 			</li>
 			<li id="nav-cart">
 				<a href="/cart/manage/seller">
-				Transactions
+				Transaction
 				</a>
 			</li>			
 			<li id="nav-banking">
