--- a/template/base.html
+++ b/template/base.html
@@ -94,9 +94,9 @@
 			</li>
 		</ul>
 		</span>
-	</td><td>
-	{{ me.nickname }}
-	<a href="{{ url_logout }}" class="bubble-button" style="margin-right:50px;">Logout</a>
+	</td><td style="text-align:right;">
+		<span>{{ me.nickname }}</span>
+		<a href="{{ url_logout }}" class="bubble-button" style="margin-right:50px;">Logout</a>
 	</td></tr>
 	</table>
 </div>
