Minor bug in cartAs pages. Now they can be used as dashboard to monitor transaction progresses.

--- a/template/ManageCartAsBuyer.html
+++ b/template/ManageCartAsBuyer.html
@@ -61,7 +61,7 @@
 			} // end of switch
 
 			j$.post(
-				'/cart/shipping/process/'+ownerId+'/'+cartId+'/',
+				'/cart/shipping/process/'+owner_id+'/'+cart_id+'/',
 				data,
 				function(result){
 					switch(action){
