Adding hooks to update BuyOrder filled_qty upon fill or editing. This value will prevent buyer from changing qty value less than filled_qty if there are sellers pending or in progress carts.

--- a/template/BrowseBuyOrderById.html
+++ b/template/BrowseBuyOrderById.html
@@ -15,7 +15,7 @@
 					if (i<10){
 						// limit to 10
 						var tt=j$.parseJSON(data[i]);
-						html+='<li><img src="'+tt['image']+'" /></li>';
+						html+='<li><img src="'+tt['image']+'" /></a></li>';
 					}
 				}
 				html+='</ul>';
