Bug in review cart post when removing fill from list. Need to save the removed one before updating cart fills property.

--- a/template/PublishNewBuyOrder.html
+++ b/template/PublishNewBuyOrder.html
@@ -423,7 +423,7 @@ items to give you a starting point for your listing.
 				{% endif %}
 			</td><td>
 			
-			<table class="ariel-table table-row-border">
+			<table class="table-row-border ariel-table">
 				<tr><td>
 				Product name
 				</td><td>
