--- a/template/ReviewCart.html
+++ b/template/ReviewCart.html
@@ -527,7 +527,7 @@
 				<span id="full-screen-switch-2" class="collapse-switch">&lt;&lt; Hide sell price</span>
 			{% endif %}
 			
-			<table class="table-row-border">
+			<table class="table-row-border" width="100%">
 				{% for f in cart.fills %}
 				<tr><td>
 						<a href="/buyorder/browse/{{ f.order.id() }}/">
