--- a/template/base.html
+++ b/template/base.html
@@ -6,6 +6,9 @@
 	<title>Anthem Market Place</title>
 	<meta name="author" content="Feng X.">
 	<link rel="stylesheet" type="text/css" href="/static/css/reset-min.css">
+
+	<!-- Channel API, must be the first one! -->
+	<script type="text/javascript" src="/_ah/channel/jsapi"></script>
 			
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
