--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1693,12 +1693,13 @@ button[item="submit-for-approval-btn"]:hover{
 .sf-table td:nth-child(2n) {
 	text-align:left;
 	width:25%;
+	padding-right:10px;
 }
 .sf-table td:nth-child(2n+1) {
     /*border-bottom: none;*/
 	font-weight:bold;
 	text-align:right;
-	padding-right:20px;
+	padding-right:10px;
 	width:25%;
 }
 .command-link{
@@ -1845,18 +1846,17 @@ div.ss{
 }
 
 table.two-col-table{
-	border-collapse:collapse;
-  	border-spacing: 0;
   	border:none;
 	margin-top:10px;
 	margin-bottom:10px;
 	width:500px;
 	table-layout:fixed;
+	border-collapse:collapse;
 }
 
 table.two-col-table td{
 	width:50%;
-	padding:2px 5px;
+	padding:5px 10px 5px 0;
 }
 
 table.two-col-table input{
@@ -1875,12 +1875,24 @@ table.two-col-table select{
 	background-color:#888;
 	color:white;
 	border:none;
-	height: 40px;
 	border-radius: 5px;
 	webkit-border-radius: 5px;
 	moz-border-radius:5px;
 	padding: 5px 0 10px 10px;
-	font-size:1.4em;
+}
+table.two-col-table textarea{
+	width:100%;
+	background-color:#888;
+	color:white;
+	border:none;
+	height: 8em;
+	border-radius: 5px;
+	webkit-border-radius: 5px;
+	moz-border-radius:5px;
+	padding: 10px;
+	-webkit-box-sizing: border-box;
+   	-moz-box-sizing: border-box;
+   	box-sizing: border-box;
 }
 
 .ss-textarea{
@@ -1988,3 +2000,10 @@ div.chart-filters input {
 	padding:0 10px;
 	color:#888;
 }	
+
+/* prevent textarea from overflowing its parent width */
+.boxsizingBorder {
+	-webkit-box-sizing: border-box;
+   	-moz-box-sizing: border-box;
+   	box-sizing: border-box;
+}
