--- a/template/base.html
+++ b/template/base.html
@@ -121,7 +121,25 @@
 </tr></table>
 </div>
  
-{% block footer %}{% endblock %}
+{% block footer %}
+<div id="portal-footer">
+	<div style="margin-right:auto;margin-left:auto;width:67%;">
+	<ul>
+		<li>&copy; 2013 All Rights Reservered by the Anthem Market Place<br />
+			Seraifaith Inc.
+		</li>
+		
+		<li>
+			<a href="mailto:anthem.marketplace@gmail.com">Contact Us</a>
+		</li>
+		<li>
+			<a href="">Term of Service</a>
+		
+		</li>
+	</ul>
+	</div>
+</div>
+{% endblock %}
 </body>
 {% endautoescape %}
 
